fix: ui issues in quick search drawer - EXO-70214,EXO-70146,EXO-70144,EXO-70072 - Meeds-io/MIPs#110 (#3608)
fix complementary filter hidden label
fix advanced filter overlapping bloc
fix hand cursor in non clickable area on mobile peoplecard
 fix bad alignment of combinations ships

--- a/webapp/portlet/src/main/webapp/skin/less/portlet/ProfileContactInformation/Style.less
+++ b/webapp/portlet/src/main/webapp/skin/less/portlet/ProfileContactInformation/Style.less
@@ -29,12 +29,18 @@
 
 #ProfileContactInformation {
 
-  .quickSearchResultExpanded {
-    @import "../../common/PeopleList/Style.less";
-  }
+  #quickSearchUsersListDrawer {
+    .quickSearchResultExpanded {
+      @import "../../common/PeopleList/Style.less";
+    }
 
-  .quickSearchResultCollapsed {
-    @import "../../common/ProfileCard/Style-mobile.less";
+    .quickSearchResultCollapsed {
+      @import "../../common/ProfileCard/Style-mobile.less";
+    }
+
+    .filter-message {
+      top: 2px;
+    }
   }
 
   .list-no-selection {
